sumo/tests/traci/SlowDown/InvalidTimeInterval/errors.traci
Error: Answered with error to command 20: Invalid time interval
Error while receiving command: tcpip::Socket::receive() @ recv: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
